--- a/index.html
+++ b/index.html
@@ -3,67 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>個人財務小管家 - 期末專案</title>
+    <title>理財小管家 - 完整功能版</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="app-container">
-        <h1>💰 財務與存錢小管家</h1>
-
-<div class="rate-card">
-    <div style="font-size: 0.8rem; opacity: 0.9;">全球匯率查詢 (對台幣 TWD)</div>
-    <select id="currency-select" onchange="getExchangeRate()" style="margin: 10px 0; background: rgba(255,255,255,0.2); color: white; border: 1px solid white;">
-        <option value="USD">🇺🇸 美金 (USD)</option>
-        <option value="HKD">🇭🇰 港幣 (HKD)</option>
-        <option value="KRW">🇰🇷 韓圓 (KRW)</option>
-        <option value="EUR">🇪🇺 歐元 (EUR)</option>
-        <option value="JPY">🇯🇵 日圓 (JPY)</option>
-    </select>
-    <div id="rate-display">匯率載入中...</div>
-</div>
-
-        <div id="status-container" class="status-box">
-            <label style="font-size: 0.8rem; color: #666;">🎯 存錢目標 (TWD)</label>
-            <input type="number" id="saving-goal" value="10000" onchange="updateStatus()">
-            <div id="status-emoji">😐</div>
-            <div id="status-text">開始記帳，挑戰目標吧！</div>
-            <div class="progress-bar-bg">
-                <div id="progress-bar-fill"></div>
+        <div class="top-section">
+            <div class="rate-card">
+                <select id="currency-select" onchange="getExchangeRate()">
+                    <option value="USD">🇺🇸 美金 (USD)</option>
+                    <option value="HKD">🇭🇰 港幣 (HKD)</option>
+                    <option value="KRW">🇰🇷 韓圓 (KRW)</option>
+                    <option value="EUR">🇪🇺 歐元 (EUR)</option>
+                    <option value="JPY">🇯🇵 日圓 (JPY)</option>
+                </select>
+                <div id="rate-display">載入中...</div>
+            </div>
+            <div id="status-container" class="status-box">
+                <div id="status-emoji">😐</div>
+                <div class="progress-bar-bg"><div id="progress-bar-fill"></div></div>
             </div>
         </div>
 
         <div class="input-section">
-            <div class="input-group">
-                <input type="number" id="income-amount" placeholder="輸入收入金額 (+)">
-                <button onclick="addIncome()" class="btn-income">存入收入</button>
+            <div class="input-row">
+                <input type="text" id="income-name" placeholder="收入來源 (如：薪水)" style="width:40%">
+                <input type="number" id="income-amount" placeholder="金額" style="width:35%">
+                <button onclick="addIncome()" class="btn-income" style="width:20%">存入</button>
             </div>
             
-            <hr style="margin: 15px 0; border: 0; border-top: 1px solid #eee;">
-            
-            <div class="input-group">
-                <input type="text" id="item-name" placeholder="支出項目 (如：晚餐)">
-                <input type="number" id="item-amount" placeholder="支出金額 (-)">
-                <select id="item-category">
-                    <option value="食">🍽️ 食</option>
-                    <option value="衣">👕 衣</option>
-                    <option value="住">🏠 住</option>
-                    <option value="行">🚗 行</option>
-                    <option value="育">📚 育</option>
-                    <option value="樂">🎮 樂</option>
+            <div class="input-row">
+                <input type="text" id="item-name" placeholder="支出項目" style="width:35%">
+                <input type="number" id="item-amount" placeholder="金額" style="width:25%">
+                <select id="item-category" style="width:20%">
+                    <option value="食">🍽️</option><option value="衣">👕</option>
+                    <option value="住">🏠</option><option value="行">🚗</option>
+                    <option value="育">📚</option><option value="樂">🎮</option>
                 </select>
-                <button onclick="addItem()" class="btn-expense">新增支出</button>
+                <button onclick="addItem()" class="btn-expense" style="width:20%">新增</button>
+            </div>
+            <div class="goal-row">
+                <label>存錢目標: </label>
+                <input type="number" id="saving-goal" value="10000" onchange="updateStatus()">
             </div>
         </div>
 
-        <h2 id="balance-display">目前結餘：$0</h2>
+        <h2 id="balance-display">結餘：$0</h2>
 
-        <div class="chart-container">
-            <h3 style="text-align: center; font-size: 0.9rem; margin-bottom: 10px;">支出分類分析</h3>
-            <canvas id="myChart"></canvas>
+        <div class="display-grid">
+            <div class="chart-container">
+                <canvas id="myChart"></canvas>
+            </div>
+            <div class="history-container">
+                <ul id="history-list"></ul>
+            </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
